--- a/test.ipynb
+++ b/test.ipynb
@@ -2,71 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "deque([2, 3])\n",
-      "3\n",
-      "deque([2])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['cat', 'a', 'is', 'tom']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "\n",
-    "# 创建一个队列\n",
-    "queue = deque([1, 2, 3])\n",
-    "\n",
-    "# 从队头弹出元素\n",
-    "element = queue.popleft()  # element的值为1，queue变为[2, 3]\n",
-    "print(element)\n",
-    "print(queue)\n",
-    "\n",
-    "# 如果想从队尾弹出元素（虽然不常见），可以使用：\n",
-    "element = queue.pop()  # element的值为3，queue变为[2]\n",
-    "print(element)\n",
-    "print(queue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([2, 4])\n"
-     ]
-    }
-   ],
-   "source": [
-    "queue.append(4)  # queue变为[2, 4]\n",
-    "print(queue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([2])\n"
-     ]
-    }
-   ],
-   "source": [
-    "queue.pop()  # queue变为[2]\n",
-    "print(queue)"
+    "s = 'tom is a cat'\n",
+    "s_lst = s.split(' ')\n",
+    "s_lst[::-1]"
    ]
   },
   {
