add new algorithms and templates for backtracking and binary tree operations

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['cat', 'a', 'is', 'tom']"
+       "[1, 2]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = 'tom is a cat'\n",
-    "s_lst = s.split(' ')\n",
-    "s_lst[::-1]"
+    "test = [1,2,3]\n",
+    "test.pop()\n",
+    "test"
    ]
   },
   {
